Archive2/8e/142ab62e69dee4/output
main.cpp: In function ‘int add(A, B, Args ...)’:
main.cpp:7:24: error: parameter packs not expanded with ‘...’:
  return add(a + b, args);
                        ^
main.cpp:7:24: note:         ‘args’
main.cpp: In function ‘int add(A, B, Args ...) [with A = int; B = int; Args = {int}]’:
main.cpp:8:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
